objects/HDFC__c.object
<CustomObject><fields>
        <fullName>HDFC_C__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>HDFCS</relationshipLabel>
        <relationshipName>HDFCS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>HDFC_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relation</description>
        <label>HDFC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HDFC__c.RecordTypeId</field>
                <operation>equals</operation>
                <valueField>$Source.RecordTypeId</valueField>
            </filterItems>
            <filterItems>
                <field>HDFC__c.HDFC_C__c</field>
                <operation>equals</operation>
                <valueField>$Source.HDFC_C__c</valueField>
            </filterItems>
            <infoMessage>HDFC LookUp</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HDFC__c</referenceTo>
        <relationshipLabel>HDFCS</relationshipLabel>
        <relationshipName>HDFCS</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>HDFC__c</fullName>
        <description>This is the custom field creation.</description>
        <displayFormat>H-{0000}</displayFormat>
        <label>HDFC</label>
        <type>AutoNumber</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>This Is HDFC Bank Field.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>HDFC</label><nameField>
        <label>HDFC Name</label>
        <type>Text</type>
    </nameField><pluralLabel>HDFCS</pluralLabel><sharingModel>ControlledByParent</sharingModel><recordTypes>
        <fullName>HDFC_RF</fullName>
        <active>true</active>
        <description>This is the record file for HDFC</description>
        <label>HDFC RF</label>
    </recordTypes></CustomObject>